--- a/password_generator/templates/password_generator/password.html
+++ b/password_generator/templates/password_generator/password.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Password Generated</h1>
     <p>Your generated password is: {{ password }}</p>
-    <a href="{% url 'password_generator' %}">Generate Another Password</a>
+    <a href="{% url 'index' %}">Generate Another Password</a>
 </body>
 
 </html>
